@@ -234,8 +234,7 @@ val get_certificates_path = Option.map (Cache_IO.cache_path_of) o certificates_o
 fun select_certificates name context = context |> Data.map (put_certs (
   if name = "" then NONE
   else
-    Path.explode name
-    |> Path.append (Resources.master_directory (Context.theory_of context))
+    (Resources.master_directory (Context.theory_of context) + Path.explode name)
     |> SOME o Cache_IO.unsynchronized_init))
 
 val setup_certificates =
